<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.inoob.practicalq5.GetCoordinate"
    tools:showIn="@layout/activity_get_coordinate">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xcoor"/>
        <EditText
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/x1"
            android:inputType="number|numberSigned|numberDecimal"
            android:hint="@string/xvalue1"/>
        <EditText
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/y1"
            android:inputType="number|numberDecimal|numberSigned"
            android:hint="@string/yvalue1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ycoor"/>
        <EditText
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/x2"
            android:hint="@string/xvalue2"
            android:inputType="number|numberDecimal|numberSigned"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/y2"
            android:hint="@string/yvalue2"
            android:layout_weight="1"
            android:inputType="number|numberSigned|numberDecimal"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mid"/>
       <TextView
           android:layout_weight="1"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:textSize="40sp"
           android:id="@+id/xmid"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:id="@+id/ymid"
            android:layout_weight="1"/>

    </LinearLayout>




</LinearLayout>
